# sewage_ai

./: .gitignore  README.md  filter_app.py  main.py  pyproject.toml  requirements.txt  seage_ai_front.py
