[project]
name = "sewage-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "markdown>=3.8.2",
    "openai>=1.91.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "protobuf==3.20.0",
    "pypdf>=5.6.1",
    "streamlit>=1.46.0",
    "unstructured>=0.17.2",
]
